hu.bme.mit.theta.formalism.tcfa/src/gen/java/hu/bme/mit/theta/formalism/tcfa/dsl/gen/TcfaDslParser.java
// Generated from TcfaDsl.g4 by ANTLR 4.5.3
package hu.bme.mit.theta.formalism.tcfa.dsl.gen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TcfaDslParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SPEC=1, CONST=2, VAR=3, REF=4, VAL=5, AUTOMATON=6, URGENT=7, INIT=8, LOC=9, 
		DBAR=10, BOOLTYPE=11, INTTYPE=12, RATTYPE=13, CLOCKTYPE=14, IF=15, THEN=16, 
		ELSE=17, IFF=18, IMPLY=19, FORALL=20, EXISTS=21, OR=22, AND=23, NOT=24, 
		EQ=25, NEQ=26, LT=27, LEQ=28, GT=29, GEQ=30, PLUS=31, MINUS=32, MUL=33, 
		RDIV=34, IDIV=35, MOD=36, REM=37, PERCENT=38, TRUE=39, FALSE=40, ASSIGN=41, 
		HAVOC=42, ASSUME=43, INT=44, NAT=45, SIGN=46, DOT=47, ID=48, UNDERSCORE=49, 
		DIGIT=50, LETTER=51, LPAREN=52, RPAREN=53, LBRACK=54, RBRACK=55, LBRAC=56, 
		RBRAC=57, COMMA=58, COLON=59, SEMICOLON=60, QUOT=61, LARROW=62, RARROW=63, 
		WS=64, COMMENT=65, LINE_COMMENT=66;
	public static final int
		RULE_tcfaSpec = 0, RULE_constDecl = 1, RULE_varDecl = 2, RULE_tcfaParamDecl = 3, 
		RULE_tcfaParamDeclList = 4, RULE_tcfaDecl = 5, RULE_tcfa = 6, RULE_prodTcfa = 7, 
		RULE_primaryTcfa = 8, RULE_defTcfa = 9, RULE_loc = 10, RULE_edge = 11, 
		RULE_refTcfa = 12, RULE_parenTcfa = 13, RULE_decl = 14, RULE_declList = 15, 
		RULE_type = 16, RULE_typeList = 17, RULE_boolType = 18, RULE_intType = 19, 
		RULE_ratType = 20, RULE_clockType = 21, RULE_funcType = 22, RULE_arrayType = 23, 
		RULE_expr = 24, RULE_exprList = 25, RULE_funcLitExpr = 26, RULE_iteExpr = 27, 
		RULE_iffExpr = 28, RULE_implyExpr = 29, RULE_quantifiedExpr = 30, RULE_forallExpr = 31, 
		RULE_existsExpr = 32, RULE_orExpr = 33, RULE_andExpr = 34, RULE_notExpr = 35, 
		RULE_equalityExpr = 36, RULE_relationExpr = 37, RULE_additiveExpr = 38, 
		RULE_multiplicativeExpr = 39, RULE_negExpr = 40, RULE_accessorExpr = 41, 
		RULE_access = 42, RULE_funcAccess = 43, RULE_arrayAccess = 44, RULE_primaryExpr = 45, 
		RULE_trueExpr = 46, RULE_falseExpr = 47, RULE_intLitExpr = 48, RULE_ratLitExpr = 49, 
		RULE_idExpr = 50, RULE_parenExpr = 51, RULE_stmt = 52, RULE_stmtList = 53, 
		RULE_assignStmt = 54, RULE_havocStmt = 55, RULE_assumeStmt = 56;
	public static final String[] ruleNames = {
		"tcfaSpec", "constDecl", "varDecl", "tcfaParamDecl", "tcfaParamDeclList", 
		"tcfaDecl", "tcfa", "prodTcfa", "primaryTcfa", "defTcfa", "loc", "edge", 
		"refTcfa", "parenTcfa", "decl", "declList", "type", "typeList", "boolType", 
		"intType", "ratType", "clockType", "funcType", "arrayType", "expr", "exprList", 
		"funcLitExpr", "iteExpr", "iffExpr", "implyExpr", "quantifiedExpr", "forallExpr", 
		"existsExpr", "orExpr", "andExpr", "notExpr", "equalityExpr", "relationExpr", 
		"additiveExpr", "multiplicativeExpr", "negExpr", "accessorExpr", "access", 
		"funcAccess", "arrayAccess", "primaryExpr", "trueExpr", "falseExpr", "intLitExpr", 
		"ratLitExpr", "idExpr", "parenExpr", "stmt", "stmtList", "assignStmt", 
		"havocStmt", "assumeStmt"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'specification'", "'const'", "'var'", "'ref'", "'val'", "'automaton'", 
		"'urgent'", "'init'", "'loc'", "'||'", "'bool'", "'int'", "'rat'", "'clock'", 
		"'if'", "'then'", "'else'", "'iff'", "'imply'", "'forall'", "'exists'", 
		"'or'", "'and'", "'not'", "'='", "'/='", "'<'", "'<='", "'>'", "'>='", 
		"'+'", "'-'", "'*'", "'/'", "'div'", "'mod'", "'rem'", "'%'", "'true'", 
		"'false'", "':='", "'havoc'", "'assume'", null, null, null, "'.'", null, 
		"'_'", null, null, "'('", "')'", "'['", "']'", "'{'", "'}'", "','", "':'", 
		"';'", "'''", "'<-'", "'->'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "SPEC", "CONST", "VAR", "REF", "VAL", "AUTOMATON", "URGENT", "INIT", 
		"LOC", "DBAR", "BOOLTYPE", "INTTYPE", "RATTYPE", "CLOCKTYPE", "IF", "THEN", 
		"ELSE", "IFF", "IMPLY", "FORALL", "EXISTS", "OR", "AND", "NOT", "EQ", 
		"NEQ", "LT", "LEQ", "GT", "GEQ", "PLUS", "MINUS", "MUL", "RDIV", "IDIV", 
		"MOD", "REM", "PERCENT", "TRUE", "FALSE", "ASSIGN", "HAVOC", "ASSUME", 
		"INT", "NAT", "SIGN", "DOT", "ID", "UNDERSCORE", "DIGIT", "LETTER", "LPAREN", 
		"RPAREN", "LBRACK", "RBRACK", "LBRAC", "RBRAC", "COMMA", "COLON", "SEMICOLON", 
		"QUOT", "LARROW", "RARROW", "WS", "COMMENT", "LINE_COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "TcfaDsl.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TcfaDslParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class TcfaSpecContext extends ParserRuleContext {
		public Token name;
		public TcfaParamDeclListContext tcfaParamDecls;
		public ConstDeclContext constDecl;
		public List<ConstDeclContext> constDecls = new ArrayList<ConstDeclContext>();
		public VarDeclContext varDecl;
		public List<VarDeclContext> varDecls = new ArrayList<VarDeclContext>();
		public TcfaDeclContext tcfaDecl;
		public List<TcfaDeclContext> tcfaDecls = new ArrayList<TcfaDeclContext>();
		public TerminalNode SPEC() { return getToken(TcfaDslParser.SPEC, 0); }
		public TerminalNode LBRAC() { return getToken(TcfaDslParser.LBRAC, 0); }
		public TerminalNode RBRAC() { return getToken(TcfaDslParser.RBRAC, 0); }
		public TerminalNode ID() { return getToken(TcfaDslParser.ID, 0); }
		public TerminalNode LPAREN() { return getToken(TcfaDslParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(TcfaDslParser.RPAREN, 0); }
		public List<ConstDeclContext> constDecl() {
			return getRuleContexts(ConstDeclContext.class);
		}
		public ConstDeclContext constDecl(int i) {
			return getRuleContext(ConstDeclContext.class,i);
		}
		public List<VarDeclContext> varDecl() {
			return getRuleContexts(VarDeclContext.class);
		}
		public VarDeclContext varDecl(int i) {
			return getRuleContext(VarDeclContext.class,i);
		}
		public List<TcfaDeclContext> tcfaDecl() {
			return getRuleContexts(TcfaDeclContext.class);
		}
		public TcfaDeclContext tcfaDecl(int i) {
			return getRuleContext(TcfaDeclContext.class,i);
		}
		public TcfaParamDeclListContext tcfaParamDeclList() {
			return getRuleContext(TcfaParamDeclListContext.class,0);
		}
		public TcfaSpecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tcfaSpec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TcfaDslListener ) ((TcfaDslListener)listener).enterTcfaSpec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TcfaDslListener ) ((TcfaDslListener)listener).exitTcfaSpec(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TcfaDslVisitor ) return ((TcfaDslVisitor<? extends T>)visitor).visitTcfaSpec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TcfaSpecContext tcfaSpec() throws RecognitionException {
		TcfaSpecContext _localctx = new TcfaSpecContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_tcfaSpec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			match(SPEC);
			setState(115);
			((TcfaSpecContext)_localctx).name = match(ID);
			setState(121);
			_la = _input.LA(1);
			if (_la==LPAREN) {
				{
				setState(116);
				match(LPAREN);
				setState(118);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << REF) | (1L << VAL) | (1L << ID))) != 0)) {
					{
					setState(117);
					((TcfaSpecContext)_localctx).tcfaParamDecls = tcfaParamDeclList();
					}
				}

				setState(120);
				match(RPAREN);
				}
			}

			setState(123);
			match(LBRAC);
			setState(129);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CONST) | (1L << VAR) | (1L << AUTOMATON))) != 0)) {
				{
				setState(127);
				switch (_input.LA(1)) {
				case CONST:
					{
					setState(124);
					((TcfaSpecContext)_localctx).constDecl = constDecl();
					((TcfaSpecContext)_localctx).constDecls.add(((TcfaSpecContext)_localctx).constDecl);
					}
					break;
				case VAR:
					{
					setState(125);
					((TcfaSpecContext)_localctx).varDecl = varDecl();
					((TcfaSpecContext)_localctx).varDecls.add(((TcfaSpecContext)_localctx).varDecl);
					}
					break;
				case AUTOMATON:
					{
					setState(126);
					((TcfaSpecContext)_localctx).tcfaDecl = tcfaDecl();
					((TcfaSpecContext)_localctx).tcfaDecls.add(((TcfaSpecContext)_localctx).tcfaDecl);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(131);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(132);
			match(RBRAC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstDeclContext extends ParserRuleContext {
		public DeclContext ddecl;
		public ExprContext value;
		public TerminalNode CONST() { return getToken(TcfaDslParser.CONST, 0); }
		public DeclContext decl() {
			return getRuleContext(DeclContext.class,0);
		}
		public TerminalNode ASSIGN() { return getToken(TcfaDslParser.ASSIGN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ConstDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TcfaDslListener ) ((TcfaDslListener)listener).enterConstDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TcfaDslListener ) ((TcfaDslListener)listener).exitConstDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TcfaDslVisitor ) return ((TcfaDslVisitor<? extends T>)visitor).visitConstDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConstDeclContext constDecl() throws RecognitionException {
		ConstDeclContext _localctx = new ConstDeclContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_constDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			match(CONST);
			setState(135);
			((ConstDeclContext)_localctx).ddecl = decl();
			setState(138);
			_la = _input.LA(1);
			if (_la==ASSIGN) {
				{
				setState(136);
				match(ASSIGN);
				setState(137);
				((ConstDeclContext)_localctx).value = expr();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDeclContext extends ParserRuleContext {
		public DeclContext ddecl;
		public ExprContext value;
		public TerminalNode VAR() { return getToken(TcfaDslParser.VAR, 0); }
		public DeclContext decl() {
			return getRuleContext(DeclContext.class,0);
		}
		public TerminalNode ASSIGN() { return getToken(TcfaDslParser.ASSIGN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public VarDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TcfaDslListener ) ((TcfaDslListener)listener).enterVarDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TcfaDslListener ) ((TcfaDslListener)listener).exitVarDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TcfaDslVisitor ) return ((TcfaDslVisitor<? extends T>)visitor).visitVarDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarDeclContext varDecl() throws RecognitionException {
		VarDeclContext _localctx = new VarDeclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_varDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			match(VAR);
			setState(141);
			((VarDeclContext)_localctx).ddecl = decl();
			setState(144);
			_la = _input.LA(1);
			if (_la==ASSIGN) {
				{
				setState(142);
				match(ASSIGN);
				setState(143);
				((VarDeclContext)_localctx).value = expr();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TcfaParamDeclContext extends ParserRuleContext {
		public Token modifier;
		public DeclContext ddecl;
		public DeclContext decl() {
			return getRuleContext(DeclContext.class,0);
		}
		public TerminalNode REF() { return getToken(TcfaDslParser.REF, 0); }
		public TerminalNode VAL() { return getToken(TcfaDslParser.VAL, 0); }
		public TcfaParamDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tcfaParamDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TcfaDslListener ) ((TcfaDslListener)listener).enterTcfaParamDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TcfaDslListener ) ((TcfaDslListener)listener).exitTcfaParamDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TcfaDslVisitor ) return ((TcfaDslVisitor<? extends T>)visitor).visitTcfaParamDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TcfaParamDeclContext tcfaParamDecl() throws RecognitionException {
		TcfaParamDeclContext _localctx = new TcfaParamDeclContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_tcfaParamDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			_la = _input.LA(1);
			if (_la==REF || _la==VAL) {
				{
				setState(146);
				((TcfaParamDeclContext)_localctx).modifier = _input.LT(1);
				_la = _input.LA(1);
				if ( !(_la==REF || _la==VAL) ) {
					((TcfaParamDeclContext)_localctx).modifier = (Token)_errHandler.recoverInline(this);
				} else {
					consume();
				}
				}
			}

			setState(149);
			((TcfaParamDeclContext)_localctx).ddecl = decl();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TcfaParamDeclListContext extends ParserRuleContext {
		public TcfaParamDeclContext tcfaParamDecl;
		public List<TcfaParamDeclContext> decls = new ArrayList<TcfaParamDeclContext>();
		public List<TcfaParamDeclContext> tcfaParamDecl() {
			return getRuleContexts(TcfaParamDeclContext.class);
		}
		public TcfaParamDeclContext tcfaParamDecl(int i) {
			return getRuleContext(TcfaParamDeclContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(TcfaDslParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(TcfaDslParser.COMMA, i);
		}
		public TcfaParamDeclListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tcfaParamDeclList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TcfaDslListener ) ((TcfaDslListener)listener).enterTcfaParamDeclList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TcfaDslListener ) ((TcfaDslListener)listener).exitTcfaParamDeclList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TcfaDslVisitor ) return ((TcfaDslVisitor<? extends T>)visitor).visitTcfaParamDeclList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TcfaParamDeclListContext tcfaParamDeclList() throws RecognitionException {
		TcfaParamDeclListContext _localctx = new TcfaParamDeclListContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_tcfaParamDeclList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(151);
			((TcfaParamDeclListContext)_localctx).tcfaParamDecl = tcfaParamDecl();
			((TcfaParamDeclListContext)_localctx).decls.add(((TcfaParamDeclListContext)_localctx).tcfaParamDecl);
			}
			setState(156);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(152);
				match(COMMA);
				setState(153);
				((TcfaParamDeclListContext)_localctx).tcfaParamDecl = tcfaParamDecl();
				((TcfaParamDeclListContext)_localctx).decls.add(((TcfaParamDeclListContext)_localctx).tcfaParamDecl);
				}
				}
				setState(158);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TcfaDeclContext extends ParserRuleContext {
		public Token name;
		public TcfaParamDeclListContext tcfaParamDecls;
		public TcfaContext def;
		public TerminalNode AUTOMATON() { return getToken(TcfaDslParser.AUTOMATON, 0); }
		public TerminalNode ASSIGN() { return getToken(TcfaDslParser.ASSIGN, 0); }
		public TerminalNode ID() { return getToken(TcfaDslParser.ID, 0); }
		public TcfaContext tcfa() {
			return getRuleContext(TcfaContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(TcfaDslParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(TcfaDslParser.RPAREN, 0); }
		public TcfaParamDeclListContext tcfaParamDeclList() {
			return getRuleContext(TcfaParamDeclListContext.class,0);
		}
		public TcfaDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tcfaDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TcfaDslListener ) ((TcfaDslListener)listener).enterTcfaDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TcfaDslListener ) ((TcfaDslListener)listener).exitTcfaDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TcfaDslVisitor ) return ((TcfaDslVisitor<? extends T>)visitor).visitTcfaDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TcfaDeclContext tcfaDecl() throws RecognitionException {
		TcfaDeclContext _localctx = new TcfaDeclContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_tcfaDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(159);
			match(AUTOMATON);
			setState(160);
			((TcfaDeclContext)_localctx).name = match(ID);
			setState(166);
			_la = _input.LA(1);
			if (_la==LPAREN) {
				{
				setState(161);
				match(LPAREN);
				setState(163);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << REF) | (1L << VAL) | (1L << ID))) != 0)) {
					{
					setState(162);
					((TcfaDeclContext)_localctx).tcfaParamDecls = tcfaParamDeclList();
					}
				}

				setState(165);
				match(RPAREN);
				}
			}

			setState(168);
			match(ASSIGN);
			setState(169);
			((TcfaDeclContext)_localctx).def = tcfa();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TcfaContext extends ParserRuleContext {
		public ProdTcfaContext prodTcfa() {
			return getRuleContext(ProdTcfaContext.class,0);
		}
		public TcfaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tcfa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TcfaDslListener ) ((TcfaDslListener)listener).enterTcfa(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TcfaDslListener ) ((TcfaDslListener)listener).exitTcfa(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TcfaDslVisitor ) return ((TcfaDslVisitor<? extends T>)visitor).visitTcfa(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TcfaContext tcfa() throws RecognitionException {
		TcfaContext _localctx = new TcfaContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_tcfa);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(171);
			prodTcfa();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
